# pi-key

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PAIRING.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: dependabot.yml
.github/workflows/: release.yml  security.yml  test.yml
c/: Makefile  README.md
c/src/: api.c  api.h  config.c  config.h  jiggler.c  jiggler.h  keymap.c  keymap.h  llm_client.c  llm_client.h  main.c  transport.c  transport.h  typer.c  typer.h
c/src/cjson/: cJSON.c  cJSON.h
kubernetes/: pikey.yaml
rust/: Cargo.toml  README.md
rust/src/: api.rs  config.rs  jiggler.rs  keymap.rs  llm_client.rs  main.rs  transport.rs  typer.rs
src/: api.py  bt_hid.py  config.py  hid_transport.py  jiggler.py  keymap.py  llm_client.py  main.py  typer.py  usb_hid.py
tests/: conftest.py  test_api.py  test_config.py  test_jiggler.py  test_keymap.py  test_llm_client.py  test_regression.py  test_transport.py  test_typer.py  test_usb_gadget.py
