[package]
name = "pikey"
version = "0.1.0"
edition = "2021"
description = "BT HID spoofer + LLM auto-typer for Raspberry Pi"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
nix = { version = "0.31", features = ["net", "fs", "ioctl"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
libc = "0.2"
hex = "0.4"
serde_json = "1"
axum = "0.8"
